--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.crashlytics'
 dependencies {
+    ext {
+        dagger_version = '2.17'
+    }
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
@@ -53,4 +56,11 @@ dependencies {
     implementation "com.google.android.material:material:1.1.0"
 
     implementation 'tech.schoolhelper:moxy-x-androidx:1.7.0'
+
+
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+    implementation "com.google.dagger:dagger:$dagger_version"
+
+    implementation "com.google.dagger:dagger-android:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
 }
